fixed width overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,8 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   margin: 0;
+  padding: 0;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -29,6 +29,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
   background: var(--cool-black);
   color: var(--strong-white);
   padding: 20px;
@@ -60,16 +61,16 @@ ul li a:hover {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  width: 100%;
   background: var(--cool-black);
   padding: 70px;
 }
 header {
-  width: 500px;
-  margin-left: 150px;
+  margin-left: 100px;
 }
 .header-main {
   font-size: 48px;
-  font-weight: bolder;
+  font-weight: 800;
   color: var(--strong-white);
 }
 .header-second {
@@ -77,7 +78,7 @@ header {
   color: var(--weak-white);
 }
 .header-img {
-  min-width: 300px;
+  min-width: 200px;
   margin-left: 20px;
 }
 header button {
@@ -89,5 +90,30 @@ header button {
   background: var(--cool-blue);
   color: var(--strong-white);
   border: 1px solid var(--cool-blue);
+  border-radius: 10px;
+}
+.main-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 60px;
+}
+.main-cont-header {
+  font-size: 36px;
+  font-weight: 800;
+  color: var(--cool-black);
+}
+.info-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+  text-align: center;
+  margin: 30px 0 30px 0;
+}
+.cards img {
+  border: solid 5px var(--cool-blue);
   border-radius: 10px;
 }
